syntax = "proto3";
package grpc_sample;


option go_package = "grpc_gateway_sample/proto";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "protoc-gen-gorm/proto/options/gorm.proto";

service aimo {
    rpc getPeriod(getPeriodRequest) returns (getPeriodResponse) {
        option (google.api.http) = {
            get: "/period"
        };
    }

    rpc getUserInfo(getUserInfoRequest) returns (getUserInfoResponse) {
        option (google.api.http) = {
            get: "/userInfo"
        };
    }

    rpc postUserInfo(UserInfo) returns (postUserInfoResponse) {
        option (google.api.http) = {
            post: "/userInfo"
            body: "*"
        };
    }
}

message getPeriodRequest{}

message getPeriodResponse{
    DefaultResponse response = 1; 
    Result  result = 2;
}

message DefaultResponse {
    int32 status = 1;
    string message = 2;
}

message Result {
    repeated Period period = 1;
}

message Period {
    option (gorm.opts).ormable = true;
    int32 id = 1;
    string period = 2;
    google.protobuf.Timestamp created_at = 3;
    google.protobuf.Timestamp updated_at = 4;
}

message getUserInfoRequest {
    int32  user_id = 1;
    string  period = 2;
}

message getUserInfoResponse {
    DefaultResponse response = 1;
    getUserInfoResult result = 2;
}

message postUserInfoResponse {
    DefaultResponse response = 1;
    message postUserInfoResult {
        int32 user_id = 2;
    }
    postUserInfoResult result = 3;
}

message getUserInfoResult {
    UserInfo user_info = 1;
}

message UserInfo {
    option (gorm.opts).ormable = true;
    int32 id = 1; 
    int32 user_id = 9;
    string last_name = 2;
    string first_name = 3;
    string period = 4;
    int32 department_id = 5;
    int32 job_id = 6;
    bool enrollment_flg = 7;
    bool admin_flg = 8;
    google.protobuf.Timestamp created_at = 10;
    google.protobuf.Timestamp updated_at = 11;
}

enum ResponseStatus {
    Unknown = 0;
    Normal = 1;
    Error = 255;
}